# gpu-guardian

./: .gitignore  MVP.md  README.md  SRS.md  SRS_EXPANSION_CHECKLIST.md  ecosystem_client_api_contract.json  go.mod
.github/workflows/: ci.yml  release.yml
cmd/guardian/: main.go  main_test.go
internal/adapter/: version.go  version_test.go  xtts.go  xtts_test.go
internal/calibration/: calibration.go  calibration_test.go  store.go  store_test.go
internal/control/: controller.go  controller_test.go  estimator.go  estimator_test.go  performance_test.go
internal/daemon/: daemon.go  daemon_test.go
internal/engine/: engine.go  engine_test.go
internal/logger/: logger.go
internal/report/: report.go  report_test.go  success_criteria.go
internal/simulation/: replay.go  replay_test.go
internal/telemetry/: performance_test.go  store.go  telemetry.go  telemetry_test.go
internal/throughput/: regression_test.go  throughput.go  throughput_test.go
npm/: README.md  package.json
npm/lib/: client.js  resolve.js
npm/test/: client.test.js  resolve.test.js
python/: README.md  pyproject.toml
python/src/gpu_guardian/: __init__.py  cli.py  client.py  resolver.py
python/tests/: test_client.py  test_resolver.py
